PC版CSS　お部屋設備まで完了

--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -21,7 +21,7 @@
 		<div class="c-drawer-btn l-lower-headerr__btn">
 			<span class="c-drawer-btn__bar"></span>
 		</div>
-		<nav class="p-gnav" id="gnav">
+		<nav class="p-gnav">
 			<a class="p-gnav__logo" href="index.html">
 				<p class="p-gnav__logo-img">
 					<img src="./assets/img/common/logo-white.png" alt="きずなや">
@@ -76,13 +76,13 @@
 			<div class="l-inner">
 				<div class="p-room__version">
 					<div class="p-room__imgs">
-						<div data-dialog="#js-dialog1-1" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog1" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/sazanami1.jpg" alt="漣のベッドルーム">
 						</div>
-						<div data-dialog="#js-dialog1-2" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog2" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/sazanami2.jpg" alt="漣の客室内">
 						</div>
-						<div data-dialog="#js-dialog1-3" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog3" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/sazanami3.jpg" alt="漣のバスルーム">
 						</div>
 					</div>
@@ -100,13 +100,13 @@
 				</div>
 				<div class="p-room__version p-room__version--reverse">
 					<div class="p-room__imgs">
-						<div data-dialog="#js-dialog2-1" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog4" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/nagi1.jpg" alt="凪のベッドルーム">
 						</div>
-						<div data-dialog="#js-dialog2-2" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog5" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/nagi2.jpg" alt="タオル">
 						</div>
-						<div data-dialog="#js-dialog2-3" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog6" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/nagi3.jpg" alt="ソファ">
 						</div>
 					</div>
@@ -125,13 +125,13 @@
 				</div>
 				<div class="p-room__version">
 					<div class="p-room__imgs">
-						<div data-dialog="#js-dialog3-1" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog7" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/nagisa1.jpg" alt="渚のベッドルーム">
 						</div>
-						<div data-dialog="#js-dialog3-2" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog8" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/nagisa2.jpg" alt="渚の客室内">
 						</div>
-						<div data-dialog="#js-dialog3-3" class="p-room__img js-dialog-open">
+						<div data-dialog="#js-dialog9" class="p-room__img js-dialog-open">
 							<img src="./assets/img/guest-room/nagisa3.jpg" alt="渚のバスルーム">
 						</div>
 					</div>
@@ -148,7 +148,7 @@
 					</div>
 				</div>
 			</div>
-			<dialog id="js-dialog1-1" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog1" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -158,7 +158,7 @@
 					</div>
 				</div>
 			</dialog>
-			<dialog id="js-dialog1-2" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog2" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -168,7 +168,7 @@
 					</div>
 				</div>
 			</dialog>
-			<dialog id="js-dialog1-3" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog3" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -178,7 +178,7 @@
 					</div>
 				</div>
 			</dialog>
-			<dialog id="js-dialog2-1" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog4" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -188,7 +188,7 @@
 					</div>
 				</div>
 			</dialog>
-			<dialog id="js-dialog2-2" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog5" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -198,7 +198,7 @@
 					</div>
 				</div>
 			</dialog>
-			<dialog id="js-dialog2-3" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog6" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -208,7 +208,7 @@
 					</div>
 				</div>
 			</dialog>
-			<dialog id="js-dialog3-1" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog7" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -218,7 +218,7 @@
 					</div>
 				</div>
 			</dialog>
-			<dialog id="js-dialog3-2" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog8" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -228,7 +228,7 @@
 					</div>
 				</div>
 			</dialog>
-			<dialog id="js-dialog3-2" class="p-dialog p-room__dialog">
+			<dialog id="js-dialog9" class="p-dialog p-room__dialog dialog">
 				<div class="p-dialog__inner">
 					<div class="p-dialog__close js-dialog-close">
 						<img src="./assets/img/common/icon-close.svg" alt="閉じる">
@@ -239,9 +239,9 @@
 				</div>
 			</dialog>
 		</section>
-		<section class="p-facility">
+		<div class="p-facility">
 			<div class="l-inner">
-				<h2 class="p-facility__title">お部屋設備</h2>
+				<h3 class="p-facility__title">お部屋設備</h3>
 				<p class="p-facility__text">
 					客室内設備冷暖房／ツインベッド（和洋室）※2／開閉式露天風呂・シャワー／テラス／洗面所／洋式トイレ（ウォシュレット）／金庫／ドライヤー／冷蔵庫※3／湯沸しポット／お茶セット／32インチ液晶テレビ／衛星放送／インターネット接続（無線LAN）アメニティシャンプー・リンス／ボディソープ・石鹸／タオル・バスタオル※4／ハミガキセット／くし・ブラシ／ドライヤー／髭剃り／浴衣／スリッパ
 					<br>
@@ -249,25 +249,27 @@
 					※お煙草お部屋は全室禁煙です。テラスでのみ喫煙できます。
 				</p>
 			</div>
-		</section>
+		</div>
 		<div class="p-check-io">
 			<div class="l-inner">
-				<div class="p-check-io__contents">
-					<div class="p-check-io__icon">
-						<img src="./assets/img/guest-room/icon-checkIn.svg" alt="アーリーチェックイン">
+				<div class="p-check-io__wrapper">
+					<div class="p-check-io__contents">
+						<div class="p-check-io__icon">
+							<img src="./assets/img/guest-room/icon-checkIn.svg" alt="アーリーチェックイン">
+						</div>
+						<h4 class="p-check-io__title">アーリーチェックイン</h4>
+						<p class="p-check-io__text">早めのチェックインで明るいうちから温泉を愉しめます。</p>
 					</div>
-					<p class="p-check-io__title">アーリーチェックイン</p>
-					<p class="p-check-io__text">早めのチェックインで明るいうちから温泉を愉しめます。</p>
-				</div>
-				<!-- /.Facility__contents -->
-				<div class="p-check-io__contents">
-					<div class="p-check-io__icon">
-						<img src="./assets/img/guest-room/icon-checkOut.svg" alt="アーリーチェックアウト">
+					<!-- /.Facility__contents -->
+					<div class="p-check-io__contents">
+						<div class="p-check-io__icon">
+							<img src="./assets/img/guest-room/icon-checkOut.svg" alt="アーリーチェックアウト">
+						</div>
+						<h4 class="p-check-io__title">アーリーチェックアウト</h4>
+						<p class="p-check-io__text">旅の余韻を感じながらゆっくりお帰りの準備をしていただけます。</p>
 					</div>
-					<p class="p-check-io__title">アーリーチェックアウト</p>
-					<p class="p-check-io__text">旅の余韻を感じながらゆっくりお帰りの準備をしていただけます。</p>
+					<!-- /.Facility__contents -->
 				</div>
-				<!-- /.Facility__contents -->
 			</div>
 		</div>
 		<section class="p-reservation">
