メインメッセージのテキストを編集しました。

--- a/開発用/src/spend.html
+++ b/開発用/src/spend.html
@@ -65,7 +65,7 @@
         </button>
         <section class="c-main-message">
 			<p class="c-main-message__text">
-				テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+				お部屋でゆっくり過ごすのもよし、<br>静岡ならではの体験をするのもよし、<br>当館と静岡の魅力を存分にお愉しみください。
 			</p>
 		</section>
 		<section class="p-spend-slide">
