温泉ページのヘッダー下テキスト変更

--- a/開発用/public/onsen.html
+++ b/開発用/public/onsen.html
@@ -21,7 +21,9 @@
 	<div class="p-concept">
 		<div class="p-concept__wrap p-concept__onsen--wrap">
 			<p class="c-concept__lead">
-				テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+				広い海の近くに位置する当館。<br>
+				どの温泉からも自然を感じることができます。<br>
+				波の音色をBGMに、特別な時間を心ゆくまでご堪能ください。
 			</p>
 		</div>
 		<div class="p-onsen__content">
