--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -18,7 +18,7 @@
 <body id="spend-page">
 	<div class="spend-wrapper">
 		<header class="l-lower-header fadeInAnime" id="header">
-			<h1 class="l-lower-header__title">客 室</h1>
+			<h1 class="l-lower-header__title">過ごし方</h1>
 			<!-- ハンバーガーメニュー -->
 			<div class="c-drawer-btn l-lower-headerr__btn">
 				<span class="c-drawer-btn__bar"></span>
