アクセスページのヘッダー画像を変更しました。

--- a/開発用/src/access.html
+++ b/開発用/src/access.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="../public/assets/css/reset.css">
         <link rel="stylesheet" href="../public/assets/css/style.min.css">
     </head>
-    <body>
+    <body id="access">
         <header class="l-lower-header fadeInAnime" id="header">
-            <h1 class="l-lower-header__title">客 室</h1>
+            <h1 class="l-lower-header__title">アクセス</h1>
             <!-- ハンバーガーメニュー -->
             <div class="c-drawer-btn l-lower-headerr__btn">
                 <span class="c-drawer-btn__bar"></span>
