--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -127,6 +127,18 @@
 			</div>
 		</div>
 	</div>
+	<section class="p-reservation">
+		<div class="l-inner">
+			<h2 class="p-reservation__title">ご予約</h2>
+			<p class="p-reservation__text">
+				ご予約は専用フォームにて承ります
+			</p>
+			<a class="c-reservation-btn" href="#">ご予約はこちら</a>
+			<p class="p-reservation__text p-reservation__text--small">
+				24時間受付中
+			</p>
+		</div>
+	</section>
 	<footer class="l-footer">
 		<div class="p-footer__wrap">
 			<div class="p-footer__info">
