--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -157,6 +157,7 @@
 		</div>
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
+	<button class="c-scroll__btn wow animated fadeIn"></button>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://kit.fontawesome.com/c67cd22077.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
