温泉ページレスポンシブ調整済

--- a/開発用/public/onsen.html
+++ b/開発用/public/onsen.html
@@ -69,12 +69,12 @@
 		<div class="p-concept__wrap p-concept__onsen--wrap">
 			<p class="c-concept__lead wow animated fadeInUp" data-wow-delay="1s" data-wow-duration="2s">
 				広い海の近くに位置する当館。<br>
-				どの温泉からも自然を感じることができます。<br>
+				どの温泉からも自然を感じることができます。<br class="pc-break">
 				波の音色をBGMに、特別な時間を心ゆくまでご堪能ください。
 			</p>
 		</div>
 	</div>
-	<div class="p-onsen__content l-inner">
+	<div class="p-onsen__content">
 		<div class="p-onsen__content--wrap">
 			<div class="p-onsen__block wow animated fadeInUp" data-wow-delay="1s">
 				<div class="p-onsen__info">
