--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -22,7 +22,7 @@
 			<span class="c-drawer-btn__bar"></span>
 		</div>
 		<nav class="p-gnav">
-			<a class="p-gnav__logo" href="index.html">
+			<a class="p-gnav__logo" href="./index.html">
 				<p class="p-gnav__logo-img">
 					<img src="./assets/img/common/logo-white.png" alt="きずなや">
 				</p>
@@ -30,36 +30,31 @@
 			</a>
 			<ul class="p-gnav__nav js-link" id="gnav">
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
 						温泉
 					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
 						客室
 					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
 						料理
 					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
 						過ごし方
 					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./access.html" class="p-gnav__nav-link g-nav-anm">
 						アクセス
 					</a>
 				</li>
 			</ul>
-			<!-- <div class="c-drawer-btn p-gnav__btn">
-                    <span class="c-drawer-btn__bar"></span>
-                    <span class="c-drawer-btn__bar"></span>
-                    <span class="c-drawer-btn__bar"></span>
-                </div> -->
 		</nav>
 	</header>
 	<!-- /.l-header -->
