余白調整、スムーススクロールボタンを設置しました。

--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -60,9 +60,9 @@
 			</nav>
 		</header>
 		<!-- /.l-header -->
-		<button class="c-search-btn">
+		<div class="c-search-btn">
 			<a href="#" class="c-search-btn__link">空 室 検 索</a>
-		</button>
+		</div>
 		<section class="c-main-message">
 			<p class="c-main-message__text">
 				お部屋でゆっくり過ごすのもよし、<br>静岡ならではの体験をするのもよし、<br>当館と静岡の魅力を存分にお愉しみください。
@@ -308,6 +308,7 @@
 		</div>
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
+	<button class="c-scroll__btn wow animated fadeIn"></button>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
