--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;800&family=Zen+Kaku+Gothic+New:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/reset.css">
-	<link rel="stylesheet" href="./assets/css/style.min.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body id="guest-room">
