スタイル修正を行いました。

--- a/開発用/src/access.html
+++ b/開発用/src/access.html
@@ -52,9 +52,9 @@
             </nav>
         </header>
         <!-- /.l-header -->
-        <button class="c-search-btn">
+        <div class="c-search-btn">
             <a href="#" class="c-search-btn__link">空 室 検 索</a>
-        </button>
+        </div>
         <main class="p-access">
             <div class="l-inner">
                 <div class="p-access__map">
