--- a/開発用/public/cooking.html
+++ b/開発用/public/cooking.html
@@ -72,7 +72,10 @@
 			<div class="p-course__version" id="sea">
 				<div class="p-course__gallery">
 					<div class="p-course__img p-course__img--01">
-						<img src="./assets/img/cooking/sea1.jpg" alt="フグのお刺身">
+						<picture>
+							<source srcset="./assets/img/cooking/sea1_sp.jpg" media="(max-width: 767px)" type="image/jpg">
+							<img src="./assets/img/cooking/sea1.jpg" alt="フグのお刺身">
+						</picture>
 					</div>
 					<div class="p-course__img p-course__img--02">
 						<img src="./assets/img/cooking/sea2.jpg" alt="蒸しガニ">
@@ -201,29 +204,43 @@
 				</div>
 				<h3 class="c-mv__title c-mv__title--footer">KIZUNAYA</h3>
 				<p class="c-address__number">
-					〒123-4567</p>
+					〒123-4567
+				</p>
 				<p class="c-address">静岡県下田市白浜1-1</p>
 				<p class="c-tel__number">TEL 0123-45-6789</p>
 			</div>
 			<div class="p-footer__nav--wrap">
 				<div class="p-footer__link--nav">
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　温泉</a>
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　料理</a>
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　客室</a>
+					<a class="c-footer__nav--item" href="#">
+						<span>ー</span>　温泉
+					</a>
+					<a class="c-footer__nav--item" href="#">
+						<span>ー</span>　料理
+					</a>
+					<a class="c-footer__nav--item" href="#">
+						<span>ー</span>　客室
+					</a>
 				</div>
 				<div class="p-footer__link--nav">
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　過ごし方</a>
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　アクセス</a>
+					<a class="c-footer__nav--item" href="#">
+						<span>ー</span>　過ごし方
+					</a>
+					<a class="c-footer__nav--item" href="#">
+						<span>ー</span>　アクセス
+					</a>
 				</div>
 			</div>
 		</div>
 		<div class="p-footer__sns--items">
-			<a href="#"><i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i></a>
-			<a href=""><i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i></a>
+			<a href="#">
+				<i class="fa-brands fa-facebook-f fa-3x" style="color:#ffffff;"></i>
+			</a>
+			<a href="">
+				<i class="fa-brands fa-instagram fa-3x" style="color:#ffffff;"></i>
+			</a>
 		</div>
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="./assets/js/script.min.js"></script>
 </body>
