--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -13,6 +13,11 @@
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Hind:wght@700&family=Kiwi+Maru&family=Noto+Sans+JP&family=Satisfy&family=Zen+Kaku+Gothic+New:wght@300;400&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Hind:wght@700&family=Kiwi+Maru&family=Noto+Sans+JP&family=Satisfy&family=Shippori+Mincho:wght@400;700;800&family=Zen+Kaku+Gothic+New:wght@300;400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.3.1/swiper-bundle.css">
+	<link rel="stylesheet" href="./assets/css/animate.css">
+	<script src="./assets/js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
 </head>
 
 <body>
@@ -37,9 +42,11 @@
 		<a href="#" class="c-search-btn__link">空 室 検 索</a>
 	</button>
 	<div class="p-concept">
-		<div class="p-concept__wrap">
-			<p class="c-concept__lead">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
-				テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+		<div class="p-concept__wrap wow animated fadeInUp" data-wow-delay="0.5s">
+			<p class="c-concept__lead">日々の忙しさから一歩離れ、非日常を感じる当館へようこそ。<br>
+				心地よい波の音、頭上に広がる満点の星空、<br>
+				豊かな海の幸を目一杯楽しんで<br>
+				心身ともにリフレッシュできる特別な時間をお過ごしください。
 			</p>
 		</div>
 		<div class="p-slider">
@@ -91,7 +98,7 @@
 	</section>
 	<div class="p-content">
 		<div class="p-content__wrap">
-			<div class="p-content__block">
+			<div class="p-content__block wow animated fadeInUp" data-wow-delay="1s">
 				<a href="#" class="c-content__img">
 					<h3 class="c-content__title">温泉</h3>
 				</a>
@@ -101,7 +108,7 @@
 					<a href="" class="c-content__link">詳しく見る</a>
 				</div>
 			</div>
-			<div class="p-content__block p-content__cooking">
+			<div class="p-content__block p-content__cooking wow animated fadeInUp" data-wow-delay="1s">
 				<div class="p-content__text p-content__text--cooking">
 					<h4 class="c-content__lead">料理</h4>
 					<p class="c-content__desc c-content__desc--cooking">目の前の海で採れた海の幸を<br>
@@ -114,7 +121,7 @@
 					<h3 class="c-content__title c-content__title--vertical">料理</h3>
 				</a>
 			</div>
-			<div class="p-content__block  p-content__guestroom">
+			<div class="p-content__block  p-content__guestroom wow animated fadeInUp" data-wow-delay="1s">
 				<a href="#" class="c-content__img c-content__img--guestroom">
 					<h3 class="c-content__title c-content__title--vertical c-content__title--guestroom">客室</h3>
 				</a>
@@ -127,6 +134,18 @@
 			</div>
 		</div>
 	</div>
+	<section class="p-reservation">
+		<div class="l-inner">
+			<h2 class="p-reservation__title">ご予約</h2>
+			<p class="p-reservation__text">
+				ご予約は専用フォームにて承ります
+			</p>
+			<a class="c-reservation-btn" href="#">ご予約はこちら</a>
+			<p class="p-reservation__text p-reservation__text--small">
+				24時間受付中
+			</p>
+		</div>
+	</section>
 	<footer class="l-footer">
 		<div class="p-footer__wrap">
 			<div class="p-footer__info">
