--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -11,6 +11,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
+	<!-- wow用のanimate.css -->
+	<link rel="stylesheet" href="./assets/css/animate.css">
 	<!-- style.css -->
 	<link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
@@ -63,12 +65,12 @@
 		<div class="c-search-btn">
 			<a href="#" class="c-search-btn__link">空 室 検 索</a>
 		</div>
-		<section class="c-main-message">
-			<p class="c-main-message__text">
+		<div class="c-main-message">
+			<p class="c-main-message__text wow animated fadeInUp" data-wow-delay="1s" data-wow-duration="2s">
 				お部屋でゆっくり過ごすのもよし、<br>静岡ならではの体験をするのもよし、<br>当館と静岡の魅力を存分にお愉しみください。
 			</p>
-		</section>
-		<section class="p-spend-slide">
+		</div>
+		<div class="p-spend-slide">
 			<ul class="p-spend-slide__wrapper">
 				<li class="p-spend-slide__block p-spend-slide__block1">
 					<div class="p-spend-slide__card p-spend-slide__card1">
@@ -199,8 +201,8 @@
 					</div>
 				</li>
 			</ul>
-		</section>
-		<section class="p-spend-tour">
+		</div>
+		<section class="p-spend-tour  wow animated fadeInUp" data-wow-delay="0.5s" data-wow-duration="1s">
 			<div class="l-inner">
 				<h2 class="p-spend-tour__title">周辺観光</h2>
 				<div class="p-spend-tour__cards">
@@ -313,6 +315,10 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+	<script src="./assets/js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
 	<script defer src="./assets/js/script.min.js"></script>
 </body>
 
