--- a/開発用/public/access.html
+++ b/開発用/public/access.html
@@ -5,9 +5,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>アクセス</title>
-	<meta name="description" content="KIZUNAYAへの経路案内のページです">
+	<!-- リセットCSS -->
 	<link rel="stylesheet" href="../public/assets/css/reset.css">
-	<link rel="stylesheet" href="../public/assets/css/style.min.css">
+	<!-- google fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
+	<!-- wow用のanimate.css -->
+	<link rel="stylesheet" href="./assets/css/animate.css">
+	<!-- style.css -->
+	<link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 
 <body id="access">
@@ -57,7 +64,7 @@
 	<div class="c-search-btn">
 		<a href="#" class="c-search-btn__link">空 室 検 索</a>
 	</div>
-	<main class="p-access">
+	<main class="p-access wow animated fadeInUp" data-wow-delay="1s" data-wow-duration="2s">
 		<div class="l-inner">
 			<div class="p-access__map">
 				<div class="p-access__map__block">
@@ -119,6 +126,13 @@
 		</div>
 		<p class="c-copyright">©︎2023 KIZUNAYA</p>
 	</footer>
+	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+	<script src="./assets/js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
+	<script defer src="./assets/js/script.min.js"></script>
 </body>
 
 </html>
