--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -65,130 +65,136 @@
 	<!-- /.l-header -->
 	<main class="l-main">
 		<div class="p-opening-sentence">
-			<div class="l-inner">
-				<p class="p-opening-sentence__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-			</div>
-		</div>
-		<section class="p-room">
-			<div class="l-inner">
-				<div class="p-room__version">
-					<div class="p-room__imgs">
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/sazanami1.jpg" alt="漣のベッドルーム">
-						</div>
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/sazanami2.jpg" alt="漣の客室">
-						</div>
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/sazanami3.jpg" alt="鹿威し">
-						</div>
-					</div>
-					<div class="p-room__sentence">
-						<h2 class="p-room__title">
-							漣
-							<span class="p-room__title-eng">Sazanami</span>
-						</h2>
-						<p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-						<div class="p-room__text-bottom">
-							<p class="p-room__text">定員　2名</p>
-							<p class="p-room__text">広さ　和室　10畳＋８畳</p>
-						</div>
-					</div>
-				</div>
-				<div class="p-room__version">
-					<div class="p-room__imgs">
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/nagi1.jpg" alt="凪のベッドルーム">
-						</div>
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/nagi2.jpg" alt="タオル">
-						</div>
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/nagi3.jpg" alt="ソファ">
-						</div>
-					</div>
-					<div class="p-room__sentence">
-						<h2 class="p-room__title">
-							凪
-							<span class="p-room__title__eng">Nagi</span>
-						</h2>
-						<!-- /.room-title -->
-						<p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-						<div class="p-room__text-bottom">
-							<p class="p-room__text">定員　2名</p>
-							<p class="p-room__text">広さ　和洋室　10畳＋８畳</p>
-						</div>
-					</div>
-				</div>
-				<div class="p-room__version">
-					<div class="p-room__imgs">
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/sazanami1.jpg" alt="渚のベッドルーム">
-						</div>
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/sazanami2.jpg" alt="渚の客室内">
-						</div>
-						<div class="p-room__img">
-							<img src="./assets/img/guest-room/sazanami3.jpg" alt="渚のバスルーム">
-						</div>
-					</div>
-					<div class="p-room__sentence">
-						<h2 class="p-room__title">
-							渚
-							<span class="p-room__title__eng">Nagisa</span>
-						</h2>
-						<p class="p-room__text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-						<div class="p-room__text-bottom">
-							<p class="p-room__text">定員　４名</p>
-							<p class="p-room__text">広さ　洋室　10畳＋８畳</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="p-facility">
-			<div class="l-inner">
-				<h2 class="p-facility__title">お部屋設備</h2>
-				<p class="p-facility__text">
-					客室内設備冷暖房／ツインベッド（和洋室）※2／開閉式露天風呂・シャワー／テラス／洗面所／洋式トイレ（ウォシュレット）／金庫／ドライヤー／冷蔵庫※3／湯沸しポット／お茶セット／32インチ液晶テレビ／衛星放送／インターネット接続（無線LAN）アメニティシャンプー・リンス／ボディソープ・石鹸／タオル・バスタオル※4／ハミガキセット／くし・ブラシ／ドライヤー／髭剃り／浴衣／スリッパ
-					<br>
-					<br>
-					※お煙草お部屋は全室禁煙です。テラスでのみ喫煙できます。
+			<div class="c-main-message">
+				<p class="c-main-message__text">
+					全室から海をご堪能いただけるように設計しています。<br>
+					過ごしやすさを重視ししたこだわりの和洋室、<br>
+					窓から入る朝日で心地の良いお目覚めを。
 				</p>
 			</div>
-		</section>
-		<div class="p-check-io">
-			<div class="l-inner">
-				<div class="p-check-io__contents">
-					<div class="p-check-io__icon">
-						<img src="./assets/img/guest-room/icon-checkIn.svg" alt="アーリーチェックイン">
+			<section class="p-room">
+				<div class="l-inner">
+					<div class="p-room__version">
+						<div class="p-room__imgs">
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/sazanami1.jpg" alt="漣のベッドルーム">
+							</div>
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/sazanami2.jpg" alt="漣の客室">
+							</div>
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/sazanami3.jpg" alt="鹿威し">
+							</div>
+						</div>
+						<div class="p-room__sentence">
+							<h2 class="p-room__title">
+								漣
+								<span class="p-room__title-eng">Sazanami</span>
+							</h2>
+							<p class="p-room__text">
+								テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+							<div class="p-room__text-bottom">
+								<p class="p-room__text">定員　2名</p>
+								<p class="p-room__text">広さ　和室　10畳＋８畳</p>
+							</div>
+						</div>
 					</div>
-					<p class="p-check-io__title">アーリーチェックイン</p>
-					<p class="p-check-io__text">早めのチェックインで明るいうちから温泉を愉しめます。</p>
-				</div>
-				<!-- /.Facility__contents -->
-				<div class="p-check-io__contents">
-					<div class="p-check-io__icon">
-						<img src="./assets/img/guest-room/icon-checkOut.svg" alt="アーリーチェックアウト">
+					<div class="p-room__version">
+						<div class="p-room__imgs">
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/nagi1.jpg" alt="凪のベッドルーム">
+							</div>
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/nagi2.jpg" alt="タオル">
+							</div>
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/nagi3.jpg" alt="ソファ">
+							</div>
+						</div>
+						<div class="p-room__sentence">
+							<h2 class="p-room__title">
+								凪
+								<span class="p-room__title__eng">Nagi</span>
+							</h2>
+							<!-- /.room-title -->
+							<p class="p-room__text">
+								テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+							<div class="p-room__text-bottom">
+								<p class="p-room__text">定員　2名</p>
+								<p class="p-room__text">広さ　和洋室　10畳＋８畳</p>
+							</div>
+						</div>
 					</div>
-					<p class="p-check-io__title">アーリーチェックアウト</p>
-					<p class="p-check-io__text">旅の余韻を感じながらゆっくりお帰りの準備をしていただけます。</p>
+					<div class="p-room__version">
+						<div class="p-room__imgs">
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/sazanami1.jpg" alt="渚のベッドルーム">
+							</div>
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/sazanami2.jpg" alt="渚の客室内">
+							</div>
+							<div class="p-room__img">
+								<img src="./assets/img/guest-room/sazanami3.jpg" alt="渚のバスルーム">
+							</div>
+						</div>
+						<div class="p-room__sentence">
+							<h2 class="p-room__title">
+								渚
+								<span class="p-room__title__eng">Nagisa</span>
+							</h2>
+							<p class="p-room__text">
+								テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+							<div class="p-room__text-bottom">
+								<p class="p-room__text">定員　４名</p>
+								<p class="p-room__text">広さ　洋室　10畳＋８畳</p>
+							</div>
+						</div>
+					</div>
 				</div>
-				<!-- /.Facility__contents -->
+			</section>
+			<section class="p-facility">
+				<div class="l-inner">
+					<h2 class="p-facility__title">お部屋設備</h2>
+					<p class="p-facility__text">
+						客室内設備冷暖房／ツインベッド（和洋室）※2／開閉式露天風呂・シャワー／テラス／洗面所／洋式トイレ（ウォシュレット）／金庫／ドライヤー／冷蔵庫※3／湯沸しポット／お茶セット／32インチ液晶テレビ／衛星放送／インターネット接続（無線LAN）アメニティシャンプー・リンス／ボディソープ・石鹸／タオル・バスタオル※4／ハミガキセット／くし・ブラシ／ドライヤー／髭剃り／浴衣／スリッパ
+						<br>
+						<br>
+						※お煙草お部屋は全室禁煙です。テラスでのみ喫煙できます。
+					</p>
+				</div>
+			</section>
+			<div class="p-check-io">
+				<div class="l-inner">
+					<div class="p-check-io__contents">
+						<div class="p-check-io__icon">
+							<img src="./assets/img/guest-room/icon-checkIn.svg" alt="アーリーチェックイン">
+						</div>
+						<p class="p-check-io__title">アーリーチェックイン</p>
+						<p class="p-check-io__text">早めのチェックインで明るいうちから温泉を愉しめます。</p>
+					</div>
+					<!-- /.Facility__contents -->
+					<div class="p-check-io__contents">
+						<div class="p-check-io__icon">
+							<img src="./assets/img/guest-room/icon-checkOut.svg" alt="アーリーチェックアウト">
+						</div>
+						<p class="p-check-io__title">アーリーチェックアウト</p>
+						<p class="p-check-io__text">旅の余韻を感じながらゆっくりお帰りの準備をしていただけます。</p>
+					</div>
+					<!-- /.Facility__contents -->
+				</div>
 			</div>
-		</div>
-		<section class="p-reservation">
-			<div class="l-inner">
-				<h2 class="p-reservation__title">ご予約</h2>
-				<p class="p-reservation__text">
-					ご予約は専用フォームにて承ります
-				</p>
-				<a class="c-reservation-btn" href="#">ご予約はこちら</a>
-				<p class="p-reservation__text p-reservation__text--small">
-					24時間受付中
-				</p>
-			</div>
-		</section>
+			<section class="p-reservation">
+				<div class="l-inner">
+					<h2 class="p-reservation__title">ご予約</h2>
+					<p class="p-reservation__text">
+						ご予約は専用フォームにて承ります
+					</p>
+					<a class="c-reservation-btn" href="#">ご予約はこちら</a>
+					<p class="p-reservation__text p-reservation__text--small">
+						24時間受付中
+					</p>
+				</div>
+			</section>
 	</main>
 	<footer class="l-footer">
 		<div class="p-footer__wrap">
