--- a/開発用/src/index.html
+++ b/開発用/src/index.html
@@ -42,12 +42,12 @@
     </div>
     <div class="c-scrolldown"><span>SCROLL</span></div>
   </header>
-    <!-- ハンバーガーメニュー -->
-    <div class="c-drawer-btn l-lower-headerr__btn">
+     <!-- ハンバーガーメニュー -->
+     <div class="c-drawer-btn l-lower-headerr__btn">
       <span class="c-drawer-btn__bar"></span>
   </div>
-  <nav class="p-gnav" id="gnav">
-      <a class="p-gnav__logo" href="index.html">
+  <nav class="p-gnav">
+      <a class="p-gnav__logo" href="./index.html">
           <p class="p-gnav__logo-img">
               <img src="./assets/img/common/logo-white.png" alt="きずなや">
           </p>
@@ -55,36 +55,31 @@
       </a>
       <ul class="p-gnav__nav js-link" id="gnav">
           <li class="p-gnav__nav-list">
-              <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+              <a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
                   温泉
               </a>
           </li>
           <li class="p-gnav__nav-list">
-              <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+              <a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
                   客室
               </a>
           </li>
           <li class="p-gnav__nav-list">
-              <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+              <a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
                   料理
               </a>
           </li>
           <li class="p-gnav__nav-list">
-              <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+              <a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
                   過ごし方
               </a>
           </li>
           <li class="p-gnav__nav-list">
-              <a href="index.html" class="p-gnav__nav-link g-nav-anm">
+              <a href="./access.html" class="p-gnav__nav-link g-nav-anm">
                   アクセス
               </a>
           </li>
       </ul>
-      <!-- <div class="c-drawer-btn p-gnav__btn">
-              <span class="c-drawer-btn__bar"></span>
-              <span class="c-drawer-btn__bar"></span>
-              <span class="c-drawer-btn__bar"></span>
-          </div> -->
   </nav>
   <button class="c-search-btn">
     <a href="#" class="c-search-btn__link">空 室 検 索</a>
@@ -208,13 +203,13 @@
       </div>
       <div class="p-footer__nav--wrap">
         <div class="p-footer__link--nav">
-          <a class="c-footer__nav--item" href="#"><span>ー</span>　温泉</a>
-          <a class="c-footer__nav--item" href="#"><span>ー</span>　料理</a>
-          <a class="c-footer__nav--item" href="#"><span>ー</span>　客室</a>
+          <a class="c-footer__nav--item" href="./onsen.html"><span>ー</span>　温泉</a>
+          <a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
+          <a class="c-footer__nav--item" href="./guest-room.html"><span>ー</span>　客室</a>
         </div>
         <div class="p-footer__link--nav">
-          <a class="c-footer__nav--item" href="#"><span>ー</span>　過ごし方</a>
-          <a class="c-footer__nav--item" href="#"><span>ー</span>　アクセス</a>
+          <a class="c-footer__nav--item" href="./spend.html"><span>ー</span>　過ごし方</a>
+          <a class="c-footer__nav--item" href="./access.html"><span>ー</span>　アクセス</a>
         </div>
       </div>
     </div>
