料理ページリンクや画像などのパスを修正しました。

--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -238,7 +238,7 @@
 				<div class="p-footer__link--nav">
 					<a class="c-footer__nav--item" href="./onsen.html"><span>ー</span>　温泉</a>
 					<a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
-					<a class="c-footer__nav--item" href="./guest-room.htm"><span>ー</span>　客室</a>
+					<a class="c-footer__nav--item" href="./guest-room.html"><span>ー</span>　客室</a>
 				</div>
 				<div class="p-footer__link--nav">
 					<a class="c-footer__nav--item" href="./spend.html"><span>ー</span>　過ごし方</a>
