フッターのリンクを修正しました。

--- a/開発用/src/spend.html
+++ b/開発用/src/spend.html
@@ -294,13 +294,13 @@
           </div>
           <div class="p-footer__nav--wrap">
             <div class="p-footer__link--nav">
-              <a class="c-footer__nav--item" href="#"><span>ー</span>　温泉</a>
-              <a class="c-footer__nav--item" href="#"><span>ー</span>　料理</a>
-              <a class="c-footer__nav--item" href="#"><span>ー</span>　客室</a>
+              <a class="c-footer__nav--item" href="./onsen.html"><span>ー</span>　温泉</a>
+              <a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
+              <a class="c-footer__nav--item" href="./guest-room.html"><span>ー</span>　客室</a>
             </div>
             <div class="p-footer__link--nav">
-              <a class="c-footer__nav--item" href="#"><span>ー</span>　過ごし方</a>
-              <a class="c-footer__nav--item" href="#"><span>ー</span>　アクセス</a>
+              <a class="c-footer__nav--item" href="./spend.html"><span>ー</span>　過ごし方</a>
+              <a class="c-footer__nav--item" href="./access.html"><span>ー</span>　アクセス</a>
             </div>
           </div>
         </div>
