過ごし方ページのnavにid="gnav"を付与しました。

--- a/開発用/public/spend.html
+++ b/開発用/public/spend.html
@@ -25,7 +25,7 @@
 			<div class="c-drawer-btn l-lower-headerr__btn">
 				<span class="c-drawer-btn__bar"></span>
 			</div>
-			<nav class="p-gnav">
+			<nav class="p-gnav" id="gnav">
 				<a class="p-gnav__logo" href="./index.html">
 					<p class="p-gnav__logo-img">
 						<img src="./assets/img/common/logo-white.png" alt="きずなや" width="66" height="76" decoding="async">
