アクセスページのリンク、id修正を行いました。

--- a/開発用/src/access.html
+++ b/開発用/src/access.html
@@ -22,14 +22,14 @@
             <div class="c-drawer-btn l-lower-headerr__btn">
                 <span class="c-drawer-btn__bar"></span>
             </div>
-            <nav class="p-gnav">
+            <nav class="p-gnav" id="gnav">
                 <a class="p-gnav__logo" href="./index.html">
                     <p class="p-gnav__logo-img">
                         <img src="./assets/img/common/logo-white.png" alt="きずなや">
                     </p>
                     <p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
                 </a>
-                <ul class="p-gnav__nav js-link" id="gnav">
+                <ul class="p-gnav__nav js-link">
                     <li class="p-gnav__nav-list">
                         <a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
                             温泉
@@ -108,13 +108,13 @@
               </div>
               <div class="p-footer__nav--wrap">
                 <div class="p-footer__link--nav">
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　温泉</a>
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　料理</a>
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　客室</a>
+                  <a class="c-footer__nav--item" href="./onsen.html"><span>ー</span>　温泉</a>
+                  <a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
+                  <a class="c-footer__nav--item" href="./guest-room.html"><span>ー</span>　客室</a>
                 </div>
                 <div class="p-footer__link--nav">
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　過ごし方</a>
-                  <a class="c-footer__nav--item" href="#"><span>ー</span>　アクセス</a>
+                  <a class="c-footer__nav--item" href="./spend.html"><span>ー</span>　過ごし方</a>
+                  <a class="c-footer__nav--item" href="./access.html"><span>ー</span>　アクセス</a>
                 </div>
               </div>
             </div>
