ドロワーメニュークリック時にバックグラウンドが追加されるように修正しました。

--- a/開発用/src/access.html
+++ b/開発用/src/access.html
@@ -57,6 +57,7 @@
                     </li>
                 </ul>
             </nav>
+            <div class="p-gnav__background"></div>
         </header>
         <!-- /.l-header -->
         <div class="c-search-btn">
