--- a/開発用/src/cooking.html
+++ b/開発用/src/cooking.html
@@ -54,6 +54,7 @@
                     </li>
                 </ul>
             </nav>
+            <div class="p-gnav__background"></div>
         </header>
         <!-- /.l-header -->
         <main class="l-main">
