--- a/開発用/src/spend.html
+++ b/開発用/src/spend.html
@@ -60,6 +60,7 @@
                     </li>
                 </ul>
             </nav>
+            <div class="p-gnav__background"></div>
         </header>
         <!-- /.l-header -->
         <div class="c-search-btn">
