客室ページPC表示レスポンシブ調整

--- a/開発用/public/onsen.html
+++ b/開発用/public/onsen.html
@@ -26,8 +26,8 @@
 		<div class="c-drawer-btn l-lower-headerr__btn">
 			<span class="c-drawer-btn__bar"></span>
 		</div>
-		<nav class="p-gnav">
-			<a class="p-gnav__logo" href="./index.html">
+		<nav class="p-gnav" id="gnav">
+			<a class="p-gnav__logo" href="index.html">
 				<p class="p-gnav__logo-img">
 					<img src="./assets/img/common/logo-white.png" alt="きずなや">
 				</p>
@@ -60,6 +60,11 @@
 					</a>
 				</li>
 			</ul>
+			<!-- <div class="c-drawer-btn p-gnav__btn">
+              <span class="c-drawer-btn__bar"></span>
+              <span class="c-drawer-btn__bar"></span>
+              <span class="c-drawer-btn__bar"></span>
+          </div> -->
 		</nav>
 	</header>
 	<button class="c-search-btn">
