客室ページのナビゲーションリンクを修正しました。

--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -30,27 +30,27 @@
 			</a>
 			<ul class="p-gnav__nav js-link" id="gnav">
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
 						温泉
 					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
 						客室
 					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
 						料理
 					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
 						過ごし方
 					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-					<a href="index.html" class="p-gnav__nav-link g-nav-anm">
+					<a href="./access.html" class="p-gnav__nav-link g-nav-anm">
 						アクセス
 					</a>
 				</li>
@@ -61,6 +61,7 @@
                     <span class="c-drawer-btn__bar"></span>
                 </div> -->
 		</nav>
+		<div class="p-gnav__background"></div>
 	</header>
 	<!-- /.l-header -->
 	<main class="l-main">
@@ -210,13 +211,13 @@
 			</div>
 			<div class="p-footer__nav--wrap">
 				<div class="p-footer__link--nav">
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　温泉</a>
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　料理</a>
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　客室</a>
+					<a class="c-footer__nav--item" href="./onsen.html"><span>ー</span>　温泉</a>
+					<a class="c-footer__nav--item" href="./cooking.html"><span>ー</span>　料理</a>
+					<a class="c-footer__nav--item" href="./guest-room.html"><span>ー</span>　客室</a>
 				</div>
 				<div class="p-footer__link--nav">
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　過ごし方</a>
-					<a class="c-footer__nav--item" href="#"><span>ー</span>　アクセス</a>
+					<a class="c-footer__nav--item" href="./spend.html"><span>ー</span>　過ごし方</a>
+					<a class="c-footer__nav--item" href="./access.html"><span>ー</span>　アクセス</a>
 				</div>
 			</div>
 		</div>
