ドロワーメニューHTML変更

--- a/開発用/public/index.html
+++ b/開発用/public/index.html
@@ -40,47 +40,43 @@
 	<!-- ハンバーガーメニュー -->
 	<div class="c-drawer-btn l-lower-headerr__btn">
 		<span class="c-drawer-btn__bar"></span>
-	</div>
-	<nav class="p-gnav" id="gnav">
-		<a class="p-gnav__logo" href="index.html">
-			<p class="p-gnav__logo-img">
-				<img src="./assets/img/common/logo-white.png" alt="きずなや">
-			</p>
-			<p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
+</div>
+<nav class="p-gnav" id="gnav">
+		<a class="p-gnav__logo" href="./index.html">
+				<p class="p-gnav__logo-img">
+						<img src="./assets/img/common/logo-white.png" alt="きずなや" width="66" height="76" decoding="async">
+				</p>
+				<p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
 		</a>
 		<ul class="p-gnav__nav js-link" id="gnav">
-			<li class="p-gnav__nav-list">
-				<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
-					温泉
-				</a>
-			</li>
-			<li class="p-gnav__nav-list">
-				<a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
-					客室
-				</a>
-			</li>
-			<li class="p-gnav__nav-list">
-				<a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
-					料理
-				</a>
-			</li>
-			<li class="p-gnav__nav-list">
-				<a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
-					過ごし方
-				</a>
-			</li>
-			<li class="p-gnav__nav-list">
-				<a href="./access.html" class="p-gnav__nav-link g-nav-anm">
-					アクセス
-				</a>
-			</li>
+				<li class="p-gnav__nav-list">
+						<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
+								温泉
+						</a>
+				</li>
+				<li class="p-gnav__nav-list">
+						<a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
+								客室
+						</a>
+				</li>
+				<li class="p-gnav__nav-list">
+						<a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
+								料理
+						</a>
+				</li>
+				<li class="p-gnav__nav-list">
+						<a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
+								過ごし方
+						</a>
+				</li>
+				<li class="p-gnav__nav-list">
+						<a href="./access.html" class="p-gnav__nav-link g-nav-anm">
+								アクセス
+						</a>
+				</li>
 		</ul>
-		<!-- <div class="c-drawer-btn p-gnav__btn">
-              <span class="c-drawer-btn__bar"></span>
-              <span class="c-drawer-btn__bar"></span>
-              <span class="c-drawer-btn__bar"></span>
-          </div> -->
-	</nav>
+</nav>
+<div class="p-gnav__background"></div>
 	<button class="c-search-btn">
 		<a href="#" class="c-search-btn__link">空 室 検 索</a>
 	</button>
