客室ページレスポンシブ調整

--- a/開発用/public/guest-room.html
+++ b/開発用/public/guest-room.html
@@ -22,46 +22,51 @@
 <body id="guest-room">
 	<header class="l-lower-header" id="header">
 		<h1 class="l-lower-header__title p-header__title--guest-room">客 室</h1>
-	<!-- ハンバーガーメニュー -->
-	<div class="c-drawer-btn l-lower-headerr__btn">
-		<span class="c-drawer-btn__bar"></span>
-</div>
-<nav class="p-gnav" id="gnav">
-		<a class="p-gnav__logo" href="./index.html">
+		<!-- ハンバーガーメニュー -->
+		<div class="c-drawer-btn l-lower-headerr__btn">
+			<span class="c-drawer-btn__bar"></span>
+		</div>
+		<nav class="p-gnav" id="gnav">
+			<a class="p-gnav__logo" href="index.html">
 				<p class="p-gnav__logo-img">
-						<img src="./assets/img/common/logo-white.png" alt="きずなや" width="66" height="76" decoding="async">
+					<img src="./assets/img/common/logo-white.png" alt="きずなや">
 				</p>
 				<p class="c-mv__title p-gnav__logo-text">KIZUNAYA</p>
-		</a>
-		<ul class="p-gnav__nav js-link" id="gnav">
+			</a>
+			<ul class="p-gnav__nav js-link" id="gnav">
 				<li class="p-gnav__nav-list">
-						<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
-								温泉
-						</a>
+					<a href="./onsen.html" class="p-gnav__nav-link g-nav-anm">
+						温泉
+					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-						<a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
-								客室
-						</a>
+					<a href="./guest-room.html" class="p-gnav__nav-link g-nav-anm">
+						客室
+					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-						<a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
-								料理
-						</a>
+					<a href="./cooking.html" class="p-gnav__nav-link g-nav-anm">
+						料理
+					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-						<a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
-								過ごし方
-						</a>
+					<a href="./spend.html" class="p-gnav__nav-link g-nav-anm">
+						過ごし方
+					</a>
 				</li>
 				<li class="p-gnav__nav-list">
-						<a href="./access.html" class="p-gnav__nav-link g-nav-anm">
-								アクセス
-						</a>
+					<a href="./access.html" class="p-gnav__nav-link g-nav-anm">
+						アクセス
+					</a>
 				</li>
-		</ul>
-</nav>
-<div class="p-gnav__background"></div>
+			</ul>
+			<!-- <div class="c-drawer-btn p-gnav__btn">
+                    <span class="c-drawer-btn__bar"></span>
+                    <span class="c-drawer-btn__bar"></span>
+                    <span class="c-drawer-btn__bar"></span>
+                </div> -->
+		</nav>
+		<div class="p-gnav__background"></div>
 	</header>
 	<!-- /.l-header -->
 	<main class="l-main">
